samples/_failures_safe/1761006357_9ddecd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d1a649f8.c: In function ‘main’:
./samples/SAFE/__tmp_d1a649f8.c:131:29: error: expected ‘)’ at end of input
  131 |         destroy_matrix(&mat1
      |                       ~     ^
      |                             )
./samples/SAFE/__tmp_d1a649f8.c:131:9: error: expected declaration or statement at end of input
  131 |         destroy_matrix(&mat1
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_d1a649f8.c:131:9: error: expected declaration or statement at end of input
